RESOLVED FIXED19443
REGRESSION (r32531-r32652): Moving the insertion point past a newline inserted in a text area skips the next character
https://bugs.webkit.org/show_bug.cgi?id=19443
Summary REGRESSION (r32531-r32652): Moving the insertion point past a newline inserte...
mitz
Reported 2008-06-08 20:47:57 PDT
Steps to reproduce: 1. In a text area, such as on this page, type "foo", press return, and type "bar" on the next line. 2. Place the insertion point on the first line, after "foo". 3. Press the right arrow key. Expected results: The insertion point should move to the next line, just before the "b". Actual results: The insertion point moved to the next line, between "b" and "ar". Regression: bisect-builds puts this in the r32531-r32652 range. The visual arrow keys (for bidi text) patch was landed in that range. Note: This does not seem to happen with a content-editable div or with a text area already containing the line break.
Attachments
Patch (7.76 KB, patch)
2008-06-09 21:01 PDT, mitz
justin.garcia: review+
mitz
Comment 1 2008-06-08 20:48:33 PDT
mitz
Comment 2 2008-06-08 20:50:48 PDT
(In reply to comment #0) > The visual arrow keys (for > bidi text) patch was landed in that range. <http://trac.webkit.org/changeset/32605>.
mitz
Comment 3 2008-06-09 21:01:58 PDT
Justin Garcia
Comment 4 2008-06-09 21:54:09 PDT
Comment on attachment 21599 [details] Patch r=me
mitz
Comment 5 2008-06-09 21:59:54 PDT
Note You need to log in before you can comment on or make changes to this bug.