WebCore:

Reviewed by Justin Garcia.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19443
          <rdar://problem/5994544> REGRESSION (r32531-r32652): Moving the insertion point past a newline inserted in a text area skips the next character

        Tests added to editing/selection/move-left-right.html

        * editing/VisiblePosition.cpp:
        (WebCore::VisiblePosition::leftVisuallyDistinctCandidate): When falling
        back from visual to logical movement, restart at the original position
        rather than an intermediate position.
        (WebCore::VisiblePosition::rightVisuallyDistinctCandidate): Ditto.

LayoutTests:

        Reviewed by Justin Garcia.

        - update test for https://bugs.webkit.org/show_bug.cgi?id=19443
          <rdar://problem/5994544> REGRESSION (r32531-r32652): Moving the insertion point past a newline inserted in a text area skips the next character

        * editing/selection/move-left-right-expected.txt:
        * editing/selection/move-left-right.html:
        * platform/mac/editing/selection/move-left-right-expected.txt:



Canonical link: https://commits.webkit.org/26924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34475 268f45cc-cd09-0410-ab3c-d52691b4dbfc